source/MFRC522.h

// Commands sent to the PICC.
enum PICC_Command {
  // The commands used by the PCD to manage communication with several PICCs
  // (ISO 14443-3, Type A, section 6.4)
  PICC_CMD_REQA =
      0x26, // REQuest command, Type A. Invites PICCs in state IDLE to go to
            // READY and prepare for anticollision or selection. 7 bit frame.
  PICC_CMD_WUPA = 0x52,    // Wake-UP command, Type A. Invites PICCs in state
                           // IDLE and HALT to go to READY(*) and prepare for
                           // anticollision or selection. 7 bit frame.
  PICC_CMD_CT = 0x88,      // Cascade Tag. Not really a command, but used during
                           // anti collision.
  PICC_CMD_SEL_CL1 = 0x93, // Anti collision/Select, Cascade Level 1
  PICC_CMD_SEL_CL2 = 0x95, // Anti collision/Select, Cascade Level 1
  PICC_CMD_SEL_CL3 = 0x97, // Anti collision/Select, Cascade Level 1
  PICC_CMD_HLTA = 0x50,    // HaLT command, Type A. Instructs an ACTIVE PICC to
                           // go to state HALT.

  // The commands used for MIFARE Classic (from
  // http://www.nxp.com/documents/data_sheet/MF1S503x.pdf, Section 9)
  // Use PCD_MFAuthent to authenticate access to a sector, then use these
  // commands to read/write/modify the blocks on the sector.
  // The read/write commands can also be used for MIFARE Ultralight.
  PICC_CMD_MF_AUTH_KEY_A = 0x60, // Perform authentication with Key A
  PICC_CMD_MF_AUTH_KEY_B = 0x61, // Perform authentication with Key B
  PICC_CMD_MF_READ =
      0x30, // Reads one 16 byte block from the authenticated sector of the
            // PICC. Also used for MIFARE Ultralight.
  PICC_CMD_MF_WRITE =
      0xA0, // Writes one 16 byte block to the authenticated sector of the
            // PICC. Called "COMPATIBILITY WRITE" for MIFARE Ultralight.
  PICC_CMD_MF_DECREMENT =
      0xC0, // Decrements the contents of a block and stores the result in the
            // internal data register.
  PICC_CMD_MF_INCREMENT =
      0xC1, // Increments the contents of a block and stores the result in the
            // internal data register.
  PICC_CMD_MF_RESTORE =
      0xC2, // Reads the contents of a block into the internal data register.
  PICC_CMD_MF_TRANSFER =
      0xB0, // Writes the contents of the internal data register to a block.

  // The commands used for MIFARE Ultralight (from
  // http://www.nxp.com/documents/data_sheet/MF0ICU1.pdf, Section 8.6)
  // The PICC_CMD_MF_READ and PICC_CMD_MF_WRITE can also be used for MIFARE
  // Ultralight.
  PICC_CMD_UL_WRITE = 0xA2 // Writes one 4 byte page to the PICC.
};
// MIFARE constants that does not fit anywhere else
enum MIFARE_Misc {
  MF_ACK = 0xA,   // The MIFARE Classic uses a 4 bit ACK/NAK. Any other value
                  // than 0xA is NAK.
  MF_KEY_SIZE = 6 // A Mifare Crypto1 key is 6 bytes.
};
// PICC types we can detect. Remember to update PICC_GetTypeName() if you add
// more.
enum PICC_Type {
  PICC_TYPE_UNKNOWN = 0,
  PICC_TYPE_ISO_14443_4 = 1,   // PICC compliant with ISO/IEC 14443-4
  PICC_TYPE_ISO_18092 = 2,     // PICC compliant with ISO/IEC 18092 (NFC)
  PICC_TYPE_MIFARE_MINI = 3,   // MIFARE Classic protocol, 320 bytes
  PICC_TYPE_MIFARE_1K = 4,     // MIFARE Classic protocol, 1KB
  PICC_TYPE_MIFARE_4K = 5,     // MIFARE Classic protocol, 4KB
  PICC_TYPE_MIFARE_UL = 6,     // MIFARE Ultralight or Ultralight C
  PICC_TYPE_MIFARE_PLUS = 7,   // MIFARE Plus
  PICC_TYPE_TNP3XXX = 8,       // Only mentioned in NXP AN 10833 MIFARE Type
                               // Identification Procedure
  PICC_TYPE_NOT_COMPLETE = 255 // SAK indicates UID is not complete.
};
// Return codes from the functions in this class. Remember to update
// GetStatusCodeName() if you add more.
enum StatusCode {
  STATUS_OK = 1,        // Success
  STATUS_ERROR = 2,     // Error in communication
  STATUS_COLLISION = 3, // Collision detected
  STATUS_TIMEOUT = 4,   // Timeout in communication.
  STATUS_NO_ROOM = 5,   // A buffer is not big enough.
  STATUS_INTERNAL_ERROR =
      6,                 // Internal error in the code. Should not happen ;-)
  STATUS_INVALID = 7,    // Invalid argument.
  STATUS_CRC_WRONG = 8,  // The CRC_A does not match
  STATUS_MIFARE_NACK = 9 // A MIFARE PICC responded with NAK.
};
// A struct used for passing the UID of a PICC.
typedef struct {
  uint8_t size; // Number of bytes in the UID. 4, 7 or 10.
  uint8_t uidByte[10];
  uint8_t sak; // The SAK (Select acknowledge) byte returned from the PICC
               // after successful selection.
} Uid;
typedef struct {
  cyhal_spi_t m_SPI;
  cyhal_gpio_t m_reset;
  Uid uid;
} mfrc522_t;
/**
 * Transmits a REQuest command, Type A. Invites PICCs in state IDLE to go to
 * READY and prepare for anticollision or selection. 7 bit frame. Beware: When
 * two PICCs are in the field at the same time I often get STATUS_TIMEOUT -
 * probably due do bad antenna design.
 *
 * @param bufferATQA  The buffer to store the ATQA (Answer to request) in
 * @param bufferSize  Buffer size, at least two bytes. Also number of bytes
 * returned if STATUS_OK.
 *
 * @return STATUS_OK on success, STATUS_??? otherwise.
 */
uint8_t PICC_RequestA(mfrc522_t *mfrc, uint8_t *bufferATQA,
                      uint8_t *bufferSize);
/**
 * Transmits a Wake-UP command, Type A. Invites PICCs in state IDLE and HALT
 * to go to READY(*) and prepare for anticollision or selection. 7 bit frame.
 * Beware: When two PICCs are in the field at the same time I often get
 * STATUS_TIMEOUT - probably due do bad antenna design.
 *
 * @param bufferATQA  The buffer to store the ATQA (Answer to request) in
 * @param bufferSize  Buffer size, at least two bytes. Also number of bytes
 * returned if STATUS_OK.
 *
 * @return STATUS_OK on success, STATUS_??? otherwise.
 */
uint8_t PICC_WakeupA(mfrc522_t *mfrc, uint8_t *bufferATQA, uint8_t *bufferSize);
/**
 * Transmits SELECT/ANTICOLLISION commands to select a single PICC.
 * Before calling this function the PICCs must be placed in the READY(*) state
 * by calling PICC_RequestA() or PICC_WakeupA(). On success:
 *   - The chosen PICC is in state ACTIVE(*) and all other PICCs have returned
 * to state IDLE/HALT. (Figure 7 of the ISO/IEC 14443-3 draft.)
 *   - The UID size and value of the chosen PICC is returned in *uid along
 * with the SAK.
 *
 * A PICC UID consists of 4, 7 or 10 bytes.
 * Only 4 bytes can be specified in a SELECT command, so for the longer UIDs
 * two or three iterations are used:
 *
 *   UID size        Number of UID bytes                Cascade levels Example
 * of PICC
 *   ========        ===================                ==============
 * =============== single                   4                                1
 * MIFARE Classic double                   7                                2
 * MIFARE Ultralight triple                  10 3                      Not
 * currently in use?
 *
 *
 * @param uid        Pointer to Uid struct. Normally output, but can also be
 * used to supply a known UID.
 * @param validBits  The number of known UID bits supplied in *uid. Normally
 * 0. If set you must also supply uid->size.
 *
 * @return STATUS_OK on success, STATUS_??? otherwise.
 */
uint8_t PICC_Select(mfrc522_t *mfrc, Uid *uid, uint8_t validBits);
/**
 * MIFARE Increment adds the delta to the value of the addressed block, and
 * stores the result in a volatile memory. For MIFARE Classic only. The sector
 * containing the block must be authenticated before calling this function.
 * Only for blocks in "value block" mode, ie with access bits [C1 C2 C3] =
 * [110] or [001]. Use MIFARE_Transfer() to store the result in a block.
 *
 * @param blockAddr The block (0-0xff) number.
 * @param delta     This number is added to the value of block blockAddr.
 *
 * @return STATUS_OK on success, STATUS_??? otherwise.
 */
uint8_t MIFARE_Increment(mfrc522_t *mfrc, uint8_t blockAddr, uint32_t delta);
/**
 * MIFARE Restore copies the value of the addressed block into a volatile
 * memory. For MIFARE Classic only. The sector containing the block must be
 * authenticated before calling this function. Only for blocks in "value
 * block" mode, ie with access bits [C1 C2 C3] = [110] or [001]. Use
 * MIFARE_Transfer() to store the result in a block.
 *
 * @param blockAddr The block (0-0xff) number.
 *
 * @return STATUS_OK on success, STATUS_??? otherwise.
 */
uint8_t MIFARE_Restore(mfrc522_t *mfrc, uint8_t blockAddr);
/**
 * MIFARE Transfer writes the value stored in the volatile memory into one
 * MIFARE Classic block. For MIFARE Classic only. The sector containing the
 * block must be authenticated before calling this function. Only for blocks
 * in "value block" mode, ie with access bits [C1 C2 C3] = [110] or [001].
 *
 * @param blockAddr The block (0-0xff) number.
 *
 * @return STATUS_OK on success, STATUS_??? otherwise.
 */
uint8_t MIFARE_Transfer(mfrc522_t *mfrc, uint8_t blockAddr);
// ************************************************************************************
//@}

// ************************************************************************************
//! @name Support functions
// ************************************************************************************
//@{

/**
 * Wrapper for MIFARE protocol communication.
 * Adds CRC_A, executes the Transceive command and checks that the response is
 * MF_ACK or a timeout.
 *
 * @param sendData      Pointer to the data to transfer to the FIFO. Do NOT
 * include the CRC_A.
 * @param sendLen       Number of bytes in sendData.
 * @param acceptTimeout True => A timeout is also success
 *
 * @return STATUS_OK on success, STATUS_??? otherwise.
 */
uint8_t PCD_MIFARE_Transceive(mfrc522_t *mfrc, uint8_t *sendData,
                              uint8_t sendLen, bool acceptTimeout);
/**
 * Translates the SAK (Select Acknowledge) to a PICC type.
 *
 * @param sak The SAK byte returned from PICC_Select().
 *
 * @return PICC_Type
 */
uint8_t PICC_GetType(mfrc522_t *mfrc, uint8_t sak);
/**
 * Returns a string pointer to the PICC type name.
 *
 * @param type One of the PICC_Type enums.
 *
 * @return A string pointer to the PICC type name.
 */
char *PICC_GetTypeName(mfrc522_t *mfrc, uint8_t type);
/**
 * Returns a string pointer to a status code name.
 *
 * @param code One of the StatusCode enums.
 *
 * @return A string pointer to a status code name.
 */
char *GetStatusCodeName(mfrc522_t *mfrc, uint8_t code);
/**
 * Calculates the bit pattern needed for the specified access bits. In the [C1
 * C2 C3] tupples C1 is MSB (=4) and C3 is LSB (=1).
 *
 * @param accessBitBuffer Pointer to byte 6, 7 and 8 in the sector trailer.
 * Bytes [0..2] will be set.
 * @param g0              Access bits [C1 C2 C3] for block 0 (for sectors
 * 0-31) or blocks 0-4 (for sectors 32-39)
 * @param g1              Access bits [C1 C2 C3] for block 1 (for sectors
 * 0-31) or blocks 5-9 (for sectors 32-39)
 * @param g2              Access bits [C1 C2 C3] for block 2 (for sectors
 * 0-31) or blocks 10-14 (for sectors 32-39)
 * @param g3              Access bits [C1 C2 C3] for the sector trailer, block
 * 3 (for sectors 0-31) or block 15 (for sectors 32-39)
 */
void MIFARE_SetAccessBits(mfrc522_t *mfrc, uint8_t *accessBitBuffer, uint8_t g0,
                          uint8_t g1, uint8_t g2, uint8_t g3);
// ************************************************************************************
//@}

// ************************************************************************************
//! @name Convenience functions - does not add extra functionality
// ************************************************************************************
//@{

/**
 * Returns true if a PICC responds to PICC_CMD_REQA.
 * Only "new" cards in state IDLE are invited. Sleeping cards in state HALT
 * are ignored.
 *
 * @return bool
 */
bool PICC_IsNewCardPresent(mfrc522_t *mfrc);
/**
 * Simple wrapper around PICC_Select.
 * Returns true if a UID could be read.
 * Remember to call PICC_IsNewCardPresent(), PICC_RequestA() or PICC_WakeupA()
 * first. The read UID is available in the class variable uid.
 *
 * @return bool
 */
bool PICC_ReadCardSerial(mfrc522_t *mfrc);