mfrc522.rs

extern "C" {
    #[doc = " MIFARE Increment adds the delta to the value of the addressed block, and\n stores the result in a volatile memory. For MIFARE Classic only. The sector\n containing the block must be authenticated before calling this function.\n Only for blocks in \"value block\" mode, ie with access bits [C1 C2 C3] =\n [110] or [001]. Use MIFARE_Transfer() to store the result in a block.\n\n @param blockAddr The block (0-0xff) number.\n @param delta     This number is added to the value of block blockAddr.\n\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn MIFARE_Increment(mfrc: *mut mfrc522_t, blockAddr: u8, delta: u32) -> u8;
}
extern "C" {
    #[doc = " MIFARE Restore copies the value of the addressed block into a volatile\n memory. For MIFARE Classic only. The sector containing the block must be\n authenticated before calling this function. Only for blocks in \"value\n block\" mode, ie with access bits [C1 C2 C3] = [110] or [001]. Use\n MIFARE_Transfer() to store the result in a block.\n\n @param blockAddr The block (0-0xff) number.\n\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn MIFARE_Restore(mfrc: *mut mfrc522_t, blockAddr: u8) -> u8;
}
extern "C" {
    #[doc = " MIFARE Transfer writes the value stored in the volatile memory into one\n MIFARE Classic block. For MIFARE Classic only. The sector containing the\n block must be authenticated before calling this function. Only for blocks\n in \"value block\" mode, ie with access bits [C1 C2 C3] = [110] or [001].\n\n @param blockAddr The block (0-0xff) number.\n\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn MIFARE_Transfer(mfrc: *mut mfrc522_t, blockAddr: u8) -> u8;
}
extern "C" {
    #[doc = " Wrapper for MIFARE protocol communication.\n Adds CRC_A, executes the Transceive command and checks that the response is\n MF_ACK or a timeout.\n\n @param sendData      Pointer to the data to transfer to the FIFO. Do NOT\n include the CRC_A.\n @param sendLen       Number of bytes in sendData.\n @param acceptTimeout True => A timeout is also success\n\n @return STATUS_OK on success, STATUS_??? otherwise."]
    pub fn PCD_MIFARE_Transceive(
        mfrc: *mut mfrc522_t,
        sendData: *mut u8,
        sendLen: u8,
        acceptTimeout: bool,
    ) -> u8;
}
extern "C" {
    #[doc = " Translates the SAK (Select Acknowledge) to a PICC type.\n\n @param sak The SAK byte returned from PICC_Select().\n\n @return PICC_Type"]
    pub fn PICC_GetType(mfrc: *mut mfrc522_t, sak: u8) -> u8;
}
extern "C" {
    #[doc = " Returns a string pointer to the PICC type name.\n\n @param type One of the PICC_Type enums.\n\n @return A string pointer to the PICC type name."]
    pub fn PICC_GetTypeName(mfrc: *mut mfrc522_t, type_: u8) -> *mut ::core::ffi::c_char;
}
extern "C" {
    #[doc = " Returns a string pointer to a status code name.\n\n @param code One of the StatusCode enums.\n\n @return A string pointer to a status code name."]
    pub fn GetStatusCodeName(mfrc: *mut mfrc522_t, code: u8) -> *mut ::core::ffi::c_char;
}
extern "C" {
    #[doc = " Calculates the bit pattern needed for the specified access bits. In the [C1\n C2 C3] tupples C1 is MSB (=4) and C3 is LSB (=1).\n\n @param accessBitBuffer Pointer to byte 6, 7 and 8 in the sector trailer.\n Bytes [0..2] will be set.\n @param g0              Access bits [C1 C2 C3] for block 0 (for sectors\n 0-31) or blocks 0-4 (for sectors 32-39)\n @param g1              Access bits [C1 C2 C3] for block 1 (for sectors\n 0-31) or blocks 5-9 (for sectors 32-39)\n @param g2              Access bits [C1 C2 C3] for block 2 (for sectors\n 0-31) or blocks 10-14 (for sectors 32-39)\n @param g3              Access bits [C1 C2 C3] for the sector trailer, block\n 3 (for sectors 0-31) or block 15 (for sectors 32-39)"]
    pub fn MIFARE_SetAccessBits(
        mfrc: *mut mfrc522_t,
        accessBitBuffer: *mut u8,
        g0: u8,
        g1: u8,
        g2: u8,
        g3: u8,
    );
}
extern "C" {
    #[doc = " Returns true if a PICC responds to PICC_CMD_REQA.\n Only \"new\" cards in state IDLE are invited. Sleeping cards in state HALT\n are ignored.\n\n @return bool"]
    pub fn PICC_IsNewCardPresent(mfrc: *mut mfrc522_t) -> bool;
}
extern "C" {
    #[doc = " Simple wrapper around PICC_Select.\n Returns true if a UID could be read.\n Remember to call PICC_IsNewCardPresent(), PICC_RequestA() or PICC_WakeupA()\n first. The read UID is available in the class variable uid.\n\n @return bool"]
    pub fn PICC_ReadCardSerial(mfrc: *mut mfrc522_t) -> bool;
}
